[package]
authors = ["Aloxaf <aloxafx@gmail.com>", "KiruyaMomochi <65301509+KiruyaMomochi@users.noreply.github.com>"]
description = "telegraph binding in Rust"
edition = "2018"
homepage = "https://github.com/Aloxaf/telegraph-rs"
license = "MIT"
name = "telegraph-rs"
readme = "README.md"
repository = "https://github.com/Aloxaf/telegraph-rs"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
blocking = ["reqwest/blocking"]
default = ["upload"]
upload = ["mime_guess"]

[dependencies]
kuchiki = "^0.8.1"
mime_guess = {version = "2.0.1", optional = true}
reqwest = {version = "0.11.4", features = ["json", "multipart"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.64"

[dev-dependencies]
tokio = {version = "1.8.1", features = ["macros", "test-util"]}
