[package]
name = "telegraph-rs"
edition = "2018"
version = "0.6.2"
authors = ["Aloxaf <aloxafx@gmail.com>", "KiruyaMomochi <65301509+KiruyaMomochi@users.noreply.github.com>"]
description = "telegraph binding for Rust"
homepage = "https://github.com/Aloxaf/telegraph-rs"
repository = "https://github.com/Aloxaf/telegraph-rs"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["upload", "kuchiki"]
upload = ["mime_guess"]
html = ["html_parser"]
kuchiki = ["kuchikiki"]

[dependencies]
reqwest = { version = "0.11.18", features = [ "json", "multipart" ] }
serde = { version = "1.0.164", features = [ "derive" ] }
serde_json = "1.0.97"
mime_guess = { version = "2.0.4", optional = true }
thiserror = "1.0.40"
kuchikiki = { version = "^0.8.2", optional = true }
html_parser = { version = "0.7.0", optional = true }

[dev-dependencies]
tokio = { version = "1.28.2", features = [ "macros", "test-util" ] }
